--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.text-white {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-icon {
+  color: whitesmoke;
+  margin-left: 20px;
+  margin-right: 25px;
+  font-size: 18px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.carousel-item {
+  height: 450px;
+  object-fit: cover;
+  margin-top: 50px;
+}
+
+.section-title {
+  font-weight: 800;
+  margin-top: 15px;
+  text-align: center;
+}
+
+.title {
+  font-weight: 700;
+}
+
+.auth-container {
+  height: 32rem;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
